[tool.poetry]
name = "brainles_aurora"
version = "0.0.4"
description = "TODO."
authors = [
  "Florian Kofler <florian.kofler@tum.de>",
  "Isra Mekki <isra.mekki@helmholtz-muenchen.de>",
]
license = "AGPL-3.0"

# Add the package.exclude field here
exclude = ["brainles_aurora/model_weights"]

[tool.poetry.dependencies]
# core
python = ">=3.10"
monai = ">=1.2.0"
torch = ">=2.1.0"
nibabel = ">=4.0.2"
numpy = ">=1.23.0"

# utils
PyGithub = ">=1.57"
tqdm = ">=4.64.1"
path = ">=16.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
