[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "brainles_aurora"
version = "0.0.0"                                                      # will be overwritten by poetry-dynamic-versioning but needs to be set
description = "Segmentation models for cancer metastasis in brain MR."
license = "AGPL-3.0"

authors = [
  "Florian Kofler <florian.kofler@tum.de>",
  "Isra Mekki <isra.mekki@helmholtz-muenchen.de>",
  "Marcel Rosier <marcel.rosier@tum.de>",
]

maintainers = [
  "Florian Kofler <florian.kofler@tum.de>",
  "Isra Mekki <isra.mekki@helmholtz-muenchen.de>",
  "Marcel Rosier <marcel.rosier@tum.de>",
]

readme = "README.md"
repository = "https://github.com/BrainLesion/AURORA"
#documentation = ""

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
]

# Add the package.exclude field here
exclude = ["brainles_aurora/model_weights"]

[tool.poetry.dependencies]
# core
python = ">=3.8"
monai = ">=1.2.0"
torch = ">=2.1.0"
nibabel = ">=4.0.2"
numpy = ">=1.23.0"

# utils
tqdm = "^4.64.1"
path = "^16.2.0"
requests = ">=2.0.0"
rich = ">=13.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=7.0.0"
sphinx-copybutton = ">=0.5.2"
sphinx-rtd-theme = ">=1.3.0"
myst-parser = ">=2.0.0"
